bindings/rust/libmem-sys/src/bindings.rs

extern "C" {
    #[doc = " Reads memory from a process and returns the number of bytes read.\n\n @param process A pointer to the process that the memory will be read from.\n @param source The starting address in the target process from which\n you want to read memory.\n @param dest A pointer to the destination buffer where the memory read\n operation will store the data read from the specified source address.\n @param size The number of bytes to read from the memory location\n specified by the `source` address.\n\n @return The number of bytes successfully read from the specified\n memory address in the target process. If an error occurs during the\n read operation, it returns 0."]
    pub fn LM_ReadMemoryEx(
        process: *const lm_process_t,
        source: lm_address_t,
        dest: *mut lm_byte_t,
        size: lm_size_t,
    ) -> lm_size_t;
}
extern "C" {
    #[doc = " Writes data from a source address to a destination address in memory.\n\n @param dest The destination memory address where the data from the\n `source` array will be written to.\n @param source A pointer to the data that needs to be written to the\n memory starting at the destination address `dest`.\n @param size The number of bytes to be written from the `source`\n array to the memory starting at the `dest` address.\n\n @return The number of bytes written to the destination memory\n address."]
    pub fn LM_WriteMemory(dest: lm_address_t, source: lm_bytearray_t, size: lm_size_t)
        -> lm_size_t;
}
extern "C" {
    #[doc = " Writes data from a source address to a destination address in a\n specified process.\n\n @param process A pointer to a structure representing a process in the\n system.\n @param dest The destination address in the target process where the\n data from the `source` array will be written to.\n @param source A pointer to the data that needs to be written to the\n memory of the target process.\n @param size The number of bytes to be written from the `source`\n bytearray to the memory address specified by `dest`.\n\n @return The number of bytes that were successfully written to the\n destination address in the process's memory. If an error occurs\n during the write operation, it returns 0."]
    pub fn LM_WriteMemoryEx(
        process: *const lm_process_t,
        dest: lm_address_t,
        source: lm_bytearray_t,
        size: lm_size_t,
    ) -> lm_size_t;
}
extern "C" {
    #[doc = " Sets a specified memory region to a given byte value.\n\n @param dest The destination memory address where the `byte` value will\n be written to, starting from this address.\n @param byte The value of the byte that will be written to the memory\n locations starting from the `dest` address.\n @param size The number of bytes to set in the memory starting from\n the `dest` address.\n\n @return The number of bytes that were successfully set to the\n specified value `byte` in the memory region starting at address\n `dest`."]
    pub fn LM_SetMemory(dest: lm_address_t, byte: lm_byte_t, size: lm_size_t) -> lm_size_t;
}
extern "C" {
    #[doc = " Sets a specified memory region to a given byte value in a target\n process.\n\n @param process A pointer to the process that the memory will be set.\n @param dest The destination address in the target process where the\n `byte` value will be written to.\n @param byte The value of the byte that will be written to the memory\n locations starting from the `dest` address.\n @param size The number of bytes to set in the memory starting from\n the `dest` address.\n\n @return The number of bytes that were successfully set to the\n specified value `byte` in the memory region starting at address\n `dest` in the target process. If there are any errors, it returns 0."]
    pub fn LM_SetMemoryEx(
        process: *const lm_process_t,
        dest: lm_address_t,
        byte: lm_byte_t,
        size: lm_size_t,
    ) -> lm_size_t;
}
extern "C" {
    #[doc = " The function sets memory protection flags for a specified memory address range.\n\n @param address The memory address to be protected.\n @param size The size of memory to be protected. If the size is 0,\n the function will default to using the system's page size for the operation.\n @param prot The new protection flags that will be applied to the memory region\n starting at the specified address. It is a bit mask of `LM_PROT_X`\n (execute), `LM_PROT_R` (read), `LM_PROT_W` (write).\n @param oldprot_out A pointer to a `lm_prot_t` type variable that will be used to\n store the old protection flags of a memory segment before they are updated with\n the new protection settings specified by the `prot` parameter.\n\n @return The function returns a boolean value, either `LM_TRUE` or `LM_FALSE`, based on the\n success of the memory protection operation."]
    pub fn LM_ProtMemory(
        address: lm_address_t,
        size: lm_size_t,
        prot: lm_prot_t,
        oldprot_out: *mut lm_prot_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " The function modifies memory protection flags for a specified address range in a given\n process.\n\n @param process A pointer to the process that the memory flags will be modified from.\n @param address The memory address to be protected.\n @param size The size of memory to be protected. If the size is 0,\n the function will default to using the system's page size for the operation.\n @param prot The new protection flags that will be applied to the memory region\n starting at the specified address. It is a bit mask of `LM_PROT_X`\n (execute), `LM_PROT_R` (read), `LM_PROT_W` (write).\n @param oldprot_out A pointer to a `lm_prot_t` type variable that will be used to\n store the old protection flags of a memory segment before they are updated with\n the new protection settings specified by the `prot` parameter.\n\n @return The function returns a boolean value indicating whether the memory\n protection operation was successful or not. It returns `LM_TRUE` if the\n operation was successful and `LM_FALSE` if it was not."]
    pub fn LM_ProtMemoryEx(
        process: *const lm_process_t,
        address: lm_address_t,
        size: lm_size_t,
        prot: lm_prot_t,
        oldprot_out: *mut lm_prot_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " The function allocates memory with a specified size and protection flags,\n returning the allocated memory address.\n\n @param size The size of memory to be allocated. If the size is 0, the\n function will allocate a full page of memory. If a specific size is\n provided, that amount of memory will be allocated, aligned to the next\n page size.\n @param prot The memory protection flags for the allocated memory region.\n It is a bit mask of `LM_PROT_X` (execute), `LM_PROT_R` (read), `LM_PROT_W`\n (write).\n\n @return The function returns the memory address of the allocated memory with\n the specified allocation options, or `LM_ADDRESS_BAD` if it fails."]
    pub fn LM_AllocMemory(size: lm_size_t, prot: lm_prot_t) -> lm_address_t;
}
extern "C" {
    #[doc = " The function allocates memory in a specified process with the given size\n and memory protection flags.\n\n @param process A pointer to the process that the memory will be allocated to.\n @param size The size of memory to be allocated. If the size is 0, the\n function will allocate a full page of memory. If a specific size is\n provided, that amount of memory will be allocated, aligned to the next\n page size.\n @param prot The memory protection flags for the allocated memory region.\n It is a bit mask of `LM_PROT_X` (execute), `LM_PROT_R` (read), `LM_PROT_W`\n (write).\n\n @return The function returns a memory address of type `lm_address_t` if the\n memory allocation is successful. If there are any issues, it returns\n `LM_ADDRESS_BAD`."]
    pub fn LM_AllocMemoryEx(
        process: *const lm_process_t,
        size: lm_size_t,
        prot: lm_prot_t,
    ) -> lm_address_t;
}
extern "C" {
    #[doc = " The function deallocates memory that was previously allocated with\n `LM_AllocMemory`.\n\n @param alloc The address of the memory block that was previously allocated.\n @param size The size of the memory block that was previously allocated.\n If the size is 0, the function will use the system's page size for unmapping\n the memory.\n\n @return The function returns `LM_TRUE` if the memory deallocation operation\n is successful, and `LM_FALSE` if the operation fails."]
    pub fn LM_FreeMemory(alloc: lm_address_t, size: lm_size_t) -> lm_bool_t;
}
extern "C" {
    #[doc = " The function deallocates memory that was previously allocated with\n `LM_AllocMemoryEx` on a given process.\n\n @param process A pointer to the process that the memory will be deallocated from.\n @param alloc The address of the memory block that was previously allocated\n and needs to be freed.\n @param size The size of the memory block that was previously allocated\n and now needs to be freed. If the size is 0, the function will use the\n system's page size as the default size for freeing the memory.\n\n @return The function returns a boolean value (`LM_TRUE` or `LM_FALSE`)\n indicating whether the memory deallocation operation was successful or\n not."]
    pub fn LM_FreeMemoryEx(
        process: *const lm_process_t,
        alloc: lm_address_t,
        size: lm_size_t,
    ) -> lm_bool_t;
}
extern "C" {
    #[doc = " The function calculates a deep pointer address by applying a series of\n offsets to a base address and dereferencing intermediate pointers.\n\n @param base The starting address from which to calculate the deep pointer.\n @param offsets An array of offsets used to navigate through the memory addresses.\n @param noffsets The number of offsets in the `offsets` array.\n\n @return The function returns a deep pointer calculated based on the provided\n base address, offsets, and number of offsets. The function iterates through\n the offsets, adjusting the base address and dereferencing accordingly."]
    pub fn LM_DeepPointer(
        base: lm_address_t,
        offsets: *const lm_address_t,
        noffsets: usize,
    ) -> lm_address_t;
}
extern "C" {
    #[doc = " The function scans a specified memory address range for a specific data\n pattern and returns the address where the data is found.\n\n @param data The data to be scanned for in memory.\n @param datasize The size of the data array. It indicates the number of\n bytes that need to match consecutively in order to consider it a match.\n @param address The starting memory address where the scanning operation\n will begin. The function will scan a range of memory starting from this\n address to find the data.\n @param scansize The size of the memory region to scan starting from the\n specified `address`. It determines the range within which the function will\n search for a match with the provided `data` array.\n\n @return The function returns the memory address where a match for the\n provided data was found. If no match is found, it returns\n `LM_ADDRESS_BAD`."]
    pub fn LM_DataScan(
        data: lm_bytearray_t,
        datasize: lm_size_t,
        address: lm_address_t,
        scansize: lm_size_t,
    ) -> lm_address_t;
}
